--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -56,8 +56,8 @@ jobs:
           dotnet tool install --global dotnet-sonarscanner
           echo "$env:USERPROFILE\.dotnet\tools" >> $env:GITHUB_PATH
           dotnet sonarscanner begin `
-          /k:"mariapanas_ReengineeringLabs" `
-          /o:"mariapanas" `
+          /k:"bipolare_lab8" `
+          /o:"bipolare" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
           /d:sonar.cs.opencover.reportsPaths="**/coverage.xml,**/coverage_EchoServer.xml" `
           /d:sonar.cpd.cs.minimumTokens=40 `
